crates/kyzo-core/tests/compile_fail/arity_zero_refused.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/arity_zero_refused.rs:18:27
   |
18 |     let _ = Arity::new(0);
   |             ---------- ^ expected `NonZero<usize>`, found integer
   |             |
   |             arguments to this function are incorrect
   |
note: associated function defined here
  --> src/data/value/arity.rs
   |
   |     pub const fn new(width: NonZeroUsize) -> Self {
   |                  ^^^
